
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_7__ TYPE_2__ ;
typedef struct TYPE_6__ TYPE_1__ ;


typedef TYPE_1__* edge ;
typedef TYPE_2__* basic_block ;
struct TYPE_7__ {int index; } ;
struct TYPE_6__ {int probability; double count; int flags; TYPE_2__* src; TYPE_2__* dest; } ;
typedef int FILE ;


 scalar_t__ ARRAY_SIZE (char const* const*) ;
 TYPE_2__* ENTRY_BLOCK_PTR ;
 TYPE_2__* EXIT_BLOCK_PTR ;
 char* HOST_WIDEST_INT_PRINT_DEC ;
 double REG_BR_PROB_BASE ;
 int fprintf (int *,char*,...) ;
 int fputc (char,int *) ;
 int fputs (char const* const,int *) ;

void
dump_edge_info (FILE *file, edge e, int do_succ)
{
  basic_block side = (do_succ ? e->dest : e->src);

  if (side == ENTRY_BLOCK_PTR)
    fputs (" ENTRY", file);
  else if (side == EXIT_BLOCK_PTR)
    fputs (" EXIT", file);
  else
    fprintf (file, " %d", side->index);

  if (e->probability)
    fprintf (file, " [%.1f%%] ", e->probability * 100.0 / REG_BR_PROB_BASE);

  if (e->count)
    {
      fprintf (file, " count:");
      fprintf (file, HOST_WIDEST_INT_PRINT_DEC, e->count);
    }

  if (e->flags)
    {
      static const char * const bitnames[] = {
 "fallthru", "ab", "abcall", "eh", "fake", "dfs_back",
 "can_fallthru", "irreducible", "sibcall", "loop_exit",
 "true", "false", "exec"
      };
      int comma = 0;
      int i, flags = e->flags;

      fputs (" (", file);
      for (i = 0; flags; i++)
 if (flags & (1 << i))
   {
     flags &= ~(1 << i);

     if (comma)
       fputc (',', file);
     if (i < (int) ARRAY_SIZE (bitnames))
       fputs (bitnames[i], file);
     else
       fprintf (file, "%d", i);
     comma = 1;
   }

      fputc (')', file);
    }
}
